--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
   <div id="header-outer" class="outer">
     <div id="header-title" class="inner">
       <h1 id="logo-wrap">
-        <a href="/sample/" id="logo">Demoj</a>
+        <a href="/sample/" id="logo">Demojm</a>
       </h1>
       
     </div>
